<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:text="@string/author"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_publishedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/publishedAt"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:layout_marginBottom="20dp"
                android:justificationMode="inter_word"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_urlToImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/social" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="3dp"
                android:justificationMode="inter_word"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="20dp"
                android:justificationMode="inter_word"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textSize="18sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:text="Sources : "
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:autoLink="web"
                        android:text="@string/url"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>